Fix: Wrap hint grid on upper breakpoint

--- a/random/css/styles.css
+++ b/random/css/styles.css
@@ -271,6 +271,10 @@ body .titlebar {
         margin-left: 10px;
     }
 
+    .app .window {
+        position: absolute;
+    }
+
     .grid {
         flex-direction: column;
     }
